--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio | Mohamad Haidar</title>
   </head>
-  <body>
+  <body style="background:#0b1220;color:#e2e8f0;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
